# serializer version: 1
# name: test_db_connection_broken
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': False,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': False,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': False,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': True,
    }),
  })
# ---
# name: test_db_connection_working
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': True,
    }),
  })
# ---
# name: test_db_migrations_applied
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': True,
    }),
  })
# ---
# name: test_db_migrations_not_applied
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': False,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': True,
    }),
  })
# ---
# name: test_db_model_accessible
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': True,
    }),
  })
# ---
# name: test_db_model_read_error
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': False,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': True,
    }),
  })
# ---
# name: test_db_model_write_error
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': False,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': True,
    }),
  })
# ---
# name: test_minio_connection_broken
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': False,
    }),
  })
# ---
# name: test_minio_connection_working
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': True,
    }),
  })
# ---
# name: test_minio_not_configured
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service (not configured)': dict({
      'ok': True,
    }),
  })
# ---
# name: test_minio_read_error
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': False,
    }),
  })
# ---
# name: test_minio_write_error
  dict({
    'caches': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database migrations': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'database models': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'databases': list([
      dict({
        'default': dict({
          'ok': True,
        }),
      }),
    ]),
    'media storage service': dict({
      'ok': False,
    }),
  })
# ---
